--- a/_templates/page.html
+++ b/_templates/page.html
@@ -1,3 +1,7 @@
 {% extends "!page.html" %}
 
 {% set css_files = css_files + ["_static/style.css"] %}
+{%- block linktags %}
+  {{ super() }}
+  <link rel="canonical" href="http://blog.shichao-an.info/{{ pathto(pagename, 1) }}{{ file_suffix }}" />
+{%- endblock %}
