--- a/_templates/page.html
+++ b/_templates/page.html
@@ -5,4 +5,16 @@
   {{ super() }}
   <link rel="canonical" href="http://blog.shichao-an.info/blog/html/{{ pagename }}{{ file_suffix }}" />
 {%- endblock %}
-{% set script_files = script_files + ["_static/google_analytics.js"] %}
+{%- block extrahead %}
+{{ super() }}
+<script type="text/javascript">
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-49219541-1', 'shichao-an.info');
+  ga('send', 'pageview');
+
+</script>
+{% endblock %}
