Temporarily disable disqus and google analytics

--- a/_templates/page.html
+++ b/_templates/page.html
@@ -5,7 +5,7 @@
   {{ super() }}
   <link rel="canonical" href="http://blog.shichao-an.info/blog/html/{{ pagename }}{{ file_suffix }}" />
 {%- endblock %}
-{% set script_files = script_files + ["_static/google_analytics.js"] %}
+{#{% set script_files = script_files + ["_static/google_analytics.js"] %}#}
 {%- block extrahead %}
 {{ super() }}
 {% endblock %}
