--- a/_templates/layout.html
+++ b/_templates/layout.html
@@ -1,3 +1,4 @@
 {% extends "!layout.html" %}
 
 {% set css_files = css_files + ["_static/style.css"] %}
+{% set script_files = script_files + ["_static/google_analytics.js"] %}
