Fixed canonical link

--- a/_templates/layout.html
+++ b/_templates/layout.html
@@ -5,6 +5,6 @@
 
 {%- block linktags %}
   {{ super() }}
-  <link rel="canonical" href="https://blog.shichao.io/blog/html/{{ pagename }}{{ file_suffix }}" />
+  <link rel="canonical" href="https://blog.shichao.io/{{ pagename }}{{ file_suffix }}" />
 {%- endblock %}
 
